--- a/AdapterRemoval.pod
+++ b/AdapterRemoval.pod
@@ -11,11 +11,11 @@ B<AdapterRemoval> --file1 filename [--file2 filename] [--basename filename] [--i
 
 =head1 DESCRIPTION
 
-B<AdapterRemoval> reads either one FASTQ file (single ended mode) or two FASTQ files (paired ended mode). It removes the residual adapter sequence from the reads and optionally trims Ns from the reads, and low qualities bases using the quality string, looks for specific sequences at the 5' end, and collapses overlapping paired ended mates into one read. Reads are discarded if the remaining genomic part is too short, or if the read contains more than an (user specified) amount of amigious nucleotides ('N').
+B<AdapterRemoval> reads either one FASTQ file (single ended mode) or two FASTQ files (paired ended mode). It removes the residual adapter sequence from the reads and optionally trims Ns from the reads, and low qualities bases using the quality string, and collapses overlapping paired ended mates into one read. Reads are discarded if the remaining genomic part is too short, or if the read contains more than an (user specified) amount of amigious nucleotides ('N'). These operations may be combined with simultanous demultiplexing.
 
 Alternatively, B<AdapterRemoval> may attempt to reconstruct a consensus adapter sequences from paired-ended data, in order to allow the identification of the adapter sequences originally used, and thereby ensure proper trimming of these reads.
 
-The reads and adapters are transformed to upper case for comparison. It is assumed that the letter 'N' is used for an unknown nucleotide, but in case the program encounters a '.' in the sequence, they will be treated as (and translated into) Ns. The program tries to check for invalid input and / or nonsensical combinations of parameters but please report strange behaviour, bugs and whatnots to MSchubert@snm.ku.dk
+The reads and adapters are transformed to upper case for comparison. It is assumed that the letter 'N' is used for an unknown nucleotide, but in case the program encounters a '.' in the sequence, they will be treated as (and translated into) Ns. The program tries to check for invalid input and / or nonsensical combinations of parameters but please report strange behaviour, bugs and such to MSchubert@snm.ku.dk
 
 If you use this program, please cite the paper:
 Stinus Lindgreen (2012): AdapterRemoval: easy cleaning of next-generation sequencing reads. BMC Res Notes, 5:337. doi: 10.1186/1756-0500-5-337.
@@ -26,19 +26,19 @@ Stinus Lindgreen (2012): AdapterRemoval: easy cleaning of next-generation sequen
 
 =item B<--file1> I<filename>
 
-Read FASTQ reads from file I<filename>. This contains either the single ended (SE) reads or, if paired ended, the mate 1 reads. If running in paired end mode, both file1 and file2 must be set. The file may be gzip compressed.
+Read FASTQ reads from file I<filename>. This contains either the single ended (SE) reads or, if paired ended, the mate 1 reads. If running in paired end mode, both file1 and file2 must be set. The file may optionally be gzip or bzip2 compressed.
 
 =item B<--file2> I<filename>
 
-Read FASTQ file I<filename> containing mate 2 reads for a paired end run. The file may be gzip compressed.
+Read FASTQ file I<filename> containing mate 2 reads for a paired end run. If specified, --file1 must also be set. The file may optionally be gzip or bzip2 compressed.
 
 =item B<--basename> I<filename>
 
-Determines the default filename for output files, unless overridden using the specific output file settings. For single-ended mode, the following filenames are used: I<filename.truncated>, I<filename.discarded>, and I<filename.settings>. In paired end mode, the following filenames are used: I<filename.pair1.truncated>, I<filename.pair2.truncated>, I<filename.singleton.truncated>, I<filename.discarded>, and I<filename.settings>. If collapsing of reads is enabled for paired ended mode, the following filenames are also used: I<filename.collapsed>, and I<filename.collapsed.truncated>. The default basename is I<output>. If gzip compression is enabled, the extension ".gz" is added to all files but the I<filename.settings> file.
+Determines the default filename for output files, unless overridden using the specific output file settings. For single-ended mode, the following filenames are used: I<basename.truncated>, I<basename.discarded>, and I<basename.settings>. In paired end mode, the following filenames are used: I<basename.pair1.truncated>, I<basename.pair2.truncated>, I<basename.singleton.truncated>, I<basename.discarded>, and I<basename.settings>. If collapsing of reads is enabled for paired ended mode, the following filenames are also used: I<basename.collapsed>, and I<basename.collapsed.truncated>. The default basename is I<your_output>. If gzip compression is enabled, the extension ".gz" is added to all files but the I<filename.settings> file, while the extension ".bz2" is used if bzip2 compression is enabled.
 
 =item B<--identify-adapters>
 
-For paired ended reads only. In this mode, AdapterRemoval will to reconstruct the adapter sequences used for a set of paired ended reads, by locating fully overlapping read-pairs, and generating a consensus sequence from the bases identified as adapter sequence. The minimum overlap is controlled by I<minalignmentlength>. The --adapter* command-line options are not used in this mode.
+For paired ended reads only. In this mode, AdapterRemoval will attempt to reconstruct the adapter sequences used for a set of paired ended reads, by locating fully overlapping read-pairs, and generating a consensus sequence from the bases identified as adapter sequence. The minimum overlap is controlled by I<minalignmentlength>. The values passed to the --adapter1 and --adapter2 command-line options are used for visual comparison with the consensus sequence, but otherwise not used in the consensus building.
 
 =item B<--trimns>
 
@@ -58,7 +58,7 @@ Set the threshold for trimming low quality bases. Default is 2. The minimum can 
 
 =item B<--collapse>
 
-Only in paired end mode. If the two mates overlap, collapse the two reads into one read by merging the two and recalculating the quality scores. The overlap needs to be at least I<minalignmentlength> nucleotides, with a maximum number of mismatches determined by I<mm>.
+In paired-end mode, if the two mates overlap, collapse the two reads into one read by merging the two and recalculating the quality scores. In single-end mode, this instead attempts to identify templates for which the entire sequence is available. In both cases, complete "collapsed" reads are written with a 'M_' name prefix, and "collapsed" reads which are trimmed due to quality settings are written with a 'MT_' name prefix. The overlap needs to be at least I<minalignmentlength> nucleotides, with a maximum number of mismatches determined by I<mm>.
 
 =item B<--mm> I<mismatchrate>
 
@@ -70,7 +70,7 @@ The minimum length required after trimming and adapter removal. Reads shorter th
 
 =item B<--minalignmentlength> I<len>
 
-Only in paired end mode. The minimum overlap between mate 1 and mate 2 before the reads are collapsed into one. Default is 11 nucleotides.
+The minimum overlap between mate 1 and mate 2 before the reads are collapsed into one, when collapsing paired end reads, or when attempting to identify complete template sequences in single-end mode. Default is 11 nucleotides.
 
 =item B<--qualitybase> I<base>
 
@@ -78,7 +78,7 @@ The base of the quality score - either '64' for Phred+Phred (i.e., Illumina 1.3+
 
 =item B<--qualitybase-output> I<base>
 
-The base of the quality score for reads written by AdapterRemoval - either '64' for Phred+Phred (i.e., Illumina 1.3+ and 1.5+) or '33' for Phred+33 (Illumina 1.8+). Default is 33.
+The base of the quality score for reads written by AdapterRemoval - either '64' for Phred+Phred (i.e., Illumina 1.3+ and 1.5+) or '33' for Phred+33 (Illumina 1.8+). In addition, the value 'solexa' may be used to specify reads with Solexa encoded scores. However, note that quality scores are represented using PHRED scores internally, and conversion to and from Solexa scores therefore result in a loss of information. The default corresponds to the value given for --qualitybase.
 
 =item B<--shift> I<num>
 
@@ -115,7 +115,7 @@ Note that --adapter1 and --adapter2 replaces the --pcr[12] options of B<AdapterR
 
 =item B<--adapter-list> I<filename>
 
-Read one or more PCR sequences from a file. The first two columns (seperated by whitespace) of each line in the file are expected to correspond to values passed to --adapter1 and --adapter2. In single ended mode, only column one is required. Lines starting with '#' are ignored. When multiple pcr sequences are specified, AdapterRemoval will try each and select the best aligning adapters for each read processed.
+Read one or more PCR sequences from a table. The first two columns (separated by whitespace) of each line in the file are expected to correspond to values passed to --adapter1 and --adapter2. In single ended mode, only column one is required. Lines starting with '#' are ignored. When multiple PCR sequences or sequence pairs are specified, AdapterRemoval will try each adapter (pair) listed in the table, and select the best aligning adapters for each read processed.
 
 =item B<--barcode-list> I<filename>
 
@@ -181,7 +181,7 @@ I<singleton> contains all reads where the other mate in a pair is discarded.
 
 I<outputcollapsed> Contains pairs that overlap and are collapsed into a single read (if I<--collapse> is used). The reads are renamed with an @M_ prefix.
 
-I<outputcollapsed> Contains pairs that overlap and are collapsed into a single read (if I<--collapse> is used) and have further been trimmed due to Ns and/or low quality nucleotides in the 5' or 3' end. The reads are renamed with an @MT_ prefix.
+I<outputcollapsedtruncated> Contains pairs that overlap and are collapsed into a single read (if I<--collapse> is used) and have further been trimmed due to Ns and/or low quality nucleotides in the 5' or 3' end. The reads are renamed with an @MT_ prefix.
 
 The types of output in both single end and paired end mode are:
 
@@ -191,7 +191,7 @@ I<settings> contains information on the parameters used in the run as well as ov
 
 =item B<--seed> I<seed>
 
-When collaping reads at positions where the two reads differ, and the quality of the bases are identical, AdapterRemoval will select a random base. This option specifies the seed used for the random number generator used by AdapterRemoval. This value is also written to the settings file.
+When collaping reads at positions where the two reads differ, and the quality of the bases are identical, AdapterRemoval will select a random base. This option specifies the seed used for the random number generator used by AdapterRemoval. This value is also written to the settings file. Note that setting the seed is not reliable in multithreaded mode, since the order of operations is non-deterministic.
 
 =item B<--gzip>
 
@@ -200,6 +200,15 @@ If set, all FASTQ files written by AdapterRemoval will be gzip compressed using 
 =item B<--gzip-level>
 
 Determines the compression level used when gzip'ing FASTQ files. Must be a value in the range 0 to 9, with 0 disabling compression and 9 being the best compression. Defaults to 6.
+
+=item B<--bzip2>
+
+If set, all FASTQ files written by AdapterRemoval will be bzip2 compressed using the compression level specified using I<--bzip2-level>. The extension ".bz2" is added to files for which no filename was given on the commandline.
+
+=item B<--bzip2-level>
+
+Determines the compression level used when bzip2'ing FASTQ files. Must be a value in the range 1 to 9, with 9 being the best compression. Defaults to 9.
+
 
 =item B<--threads>
 
@@ -219,67 +228,123 @@ Output the summary of available command-line options, including default values a
 
 =head1 EXAMPLE: Single end experiment
 
-The following command removes adapters from the file I<experiment.fq.bz2> that has been compressed using gzip, trims both Ns and low qualities from the reads, uses quality base 33 (default), saves the discarded reads in file I<experiment.discarded>, and puts the trimmed reads into a gzipped file (written to I<stdout> per default in single end mode):
+The following command removes adapters from the file I<reads_1.fq> trims both Ns and low quality bases from the reads, and gzip compresses the resulting files. The --basename option is used to specify the prefix for output files.
 
-  $ AdapterRemoval --file1 experiment.fq.gz --basename my_trimmed_reads --trimns --trimqualities --gzip
+    $ AdapterRemoval --file1 reads_1.fq --basename output_single --trimns --trimqualities --gzip
 
-Since --gzip and --basename is specified, the trimmed FASTQ reads are written to 'my_trimmed_reads.truncated.gz', the dicarded FASTQ reads are written to 'my_trimmed_reads.discarded.gz', and the settings are written to 'my_trimmed_reads.settings'.
+Since --gzip and --basename is specified, the trimmed FASTQ reads are written to I<output_single.truncated.gz>, the dicarded FASTQ reads are written to I<output_single.discarded.gz>, and settings and summary statistics are written to I<output_single.settings>.
+
 
 
 =head1 EXAMPLE: Paired end experiment.
 
-The following command removes adapters from a paired end experiment where the reads are kept in files I<experiment.pair1.fq.gz> and I<experiment.pair2.fq.gz>. The reads are trimmed for both Ns and low qualities, overlapping reads (at least 11 nucleotides per default) are collapsed, and the qualities use base 64. Output files use basename I<experiment>:
+The following command removes adapters from a paired-end reads, where the mate 1 and mate 2 reads are kept in files I<reads_1.fq> and I<reads_2.fq>, respectively. The reads are trimmed for both Ns and low quality bases, and overlapping reads (at least 11 nucleotides, per default) are merged (collapsed):
 
-  $ AdapterRemoval --file1 experiment.pair1.fq.gz --file2 experiment.pair2.fq.gz --trimns --trimqualities --collapse --qualitybase 64 --basename experiment
+    $ AdapterRemoval --file1 reads_1.fq --file2 reads_2.fq --basename output_paired --trimns --trimqualities --collapse
 
-This command would generate files I<experiment.pair1.truncated> and I<experiment.pair2.truncated> containing the trimmed reads in pairs, I<experiment.singleton.truncated> containing collapsed read pairs and reads where one mate is discarded, and I<experiment.discarded> containing the reads that did not pass the tests.
+This command generates the files I<output_paired.pair1.truncated> and I<output_paired.pair2.truncated>, which contain trimmed pairs of reads which were not collapsed, I<output_paired.singleton.truncated> containing reads where one mate was discarded, I<output_paired.collapsed> containing merged reads, and I<output_paired.collapsed.truncated> containing merged reads that have been trimmed due to the --trimns or --trimqualities options. Finally, the I<output_paired.discarded> and I<output_paired.settings> files correspond to those of the single-end run.
 
-=head1 EXAMPLE: Paired end experiment using more complex output.
 
-The following command works as above, except that it now reads input files that are compressed using bzip2, and the truncated reads are compressed as well. The discarded reads are, well, discarded by redirecting them to /dev/null:
+=head1 EXAMPLE: Paired end reads containing multiple, distinct adapter pairs.
 
-  $ AdapterRemoval --file1 <(bzcat experiment.pair1.fq.bz2) --file2 <(bzcat experiment.pair2.fq.bz2) --trimns --trimqualities --collapse --settings experiment.settings --qualitybase 64 --output1 >(bzip2 > experiment.pair1.truncated.bz2) --output2 >(bzip2 > experiment.pair2.truncated.bz2) --singleton >(bzip2 > experiment.singleton.truncated.bz2) --outputcollapsed >(bzip2 > experiment.collapsed.bz2) --outputcollapsedtruncated >(bzip2 > experiment.collapsed.truncated.bz2) --discarded /dev/null
+It is possible to trim data that contains multiple adapter pairs, by providing a one or two-column table containing possible adapter combinations (for single-end and paired-end trimming, respectively; see e.g. I<examples/adapters.txt>):
+
+    $ cat adapters.txt
+    AGATCGGAAGAGCACACGTCTGAACTCCAGTCACCACCTAATCTCGTATGCCGTCTTCTGCTTG    AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATT
+    AAACTTGCTCTGTGCCCGCTCCGTATGTCACAACAGTGCGTGTATCACCTCAATGCAGGACTCA    GATCGGGAGTAATTTGGAGGCAGTAGTTCGTCGAAACTCGGAGCGTCTTTAGCAGGAG
+    CTAATTTGCCGTAGCGACGTACTTCAGCCTCCAGGAATTGGACCCTTACGCACACGCATTCATG    TACCGTGAAAGGTGCGCTTAGTGGCATATGCGTTAAGAGCTAGGTAACGGTCTGGAGG
+    GTTCATACGACGACGACCAATGGCACACTTATCCGGTACTTGCGTTTCAATGCGCATGCCCCAT    TAAGAAACTCGGAGTTTGGCCTGCGAGGTAGCTTGGGTGTTATGAAGAACGGCATGCG
+    CCATGCCCCGAAGATTCCTATACCCTTAAGGTCGCAATTGTTCGAGTAAGCTGTACGCGCCCAT    GTTGCATTGACCCGAAGGGCTCGATGTTTAGGGAGGTCAGAAGTTGAGCGGGTTCAAA
+
+This table is then specified using the --adapter-list option:
+
+    $ AdapterRemoval --file1 reads_1.fq --file2 reads_2.fq --basename output_multi --trimns --trimqualities --collapse --adapter-list adapters.txt
+
+The resulting .summary file contains an overview of how frequently each adapter (pair) was used.
+
+Note that in the case of paired-end adapters, AdapterRemoval considers only the combinations of adapters specified in the table, one combination per row. For single-end trimming, only the first column of the table file is required, and the list may therefore take the form of a file containing one sequence per line.
+
 
 
 =head1 EXAMPLE: Identifying adapter sequences from paired-ended reads
 
-If we did not know the adapter sequences for the I<experiment.*.fq.gz> files, AdapterRemoval may be used to generate a consensus adapter sequence based on fragments identified as belonging to the adapters based on pairwise alignments of the reads.
+If we did not know the adapter sequences for paired-end reads, AdapterRemoval may be used to generate a consensus adapter sequence based on fragments identified as belonging to the adapters through pairwise alignments of the reads, provided that the data set contains only a single adpater sequence (not counting differences in index sequences).
 
-In the following example, the identified adapters corresponds to the default adapter sequences with a poly-A tail resulting from sequencing past the end of the insert + templates. It is not nessesary to specify this tail when using the --adapter1 or --adapter2 command-line options. The characters shown under each of the consensus sequences represented the phred-encoded fraction of bases identical to the consensus base, with adapter 1 containing the barcode CGATGA:
+In the following example, the identified adapters corresponds to the default adapter sequences with a poly-A tail resulting from sequencing past the end of the insert + templates. It is not nessesary to specify this tail when using the --adapter1 or --adapter2 command-line options. The characters shown under each of the consensus sequences represented the phred-encoded fraction of bases identical to the consensus base, with adapter 1 containing the index CACCTA:
 
-  $ ~/research/tools/adapterremoval-dev/build/AdapterRemoval --identify-adapters --file1 experiment.pair1.fq.gz --file2 experiment.pair2.fq.gz
+    $ AdapterRemoval --identify-adapters --file1 reads_1.fq --file2 reads_2.fq
 
-  Attemping to identify adapter sequences ...
-  Processed last 1,000,000 pairs in 14.3s; 30,000,000 pairs in 7:25.4s ...
-  Processed a total of 30,036,785 pairs in 7:25.9s ...
-     Found 26793756 overlapping pairs ...
-     Of which 22919286 contained adapter sequence(s) ...
+    Attemping to identify adapter sequences ...
+    Processed a total of 1,000 reads in 0.0s; 129,000 reads per second on average ...
+       Found 394 overlapping pairs ...
+       Of which 119 contained adapter sequence(s) ...
 
-  Printing adapter sequences, including poly-A tails:
-    --adapter1:  AGATCGGAAGAGCACACGTCTGAACTCCAGTCACTAGATGATCTCGTATGCCGTCTTCTGCTTGAAAAAAAAAAAAAAAAAAAAAAA
-                 298869977756474655355455455233234343323221,333234241212731301730/000//++)'%$####"""""""
+    Printing adapter sequences, including poly-A tails:
+      --adapter1:  AGATCGGAAGAGCACACGTCTGAACTCCAGTCACNNNNNNATCTCGTATGCCGTCTTCTGCTTG
+                   ||||||||||||||||||||||||||||||||||******||||||||||||||||||||||||
+       Consensus:  AGATCGGAAGAGCACACGTCTGAACTCCAGTCACCACCTAATCTCGTATGCCGTCTTCTGCTTGAAAAAAAAAAAAAAAAAAAAAAAA
+         Quality:  55200522544444/4411330333330222222/1.1.1.1111100-00000///..+....--*-)),,+++++++**(('%%%$
 
-      Top 5 most common 12-bp 5'-kmers:
-              1: AGATCGGAAGAG = 94.29% (20347167)
-              2: GGATCGGAAGAG =  1.15% (248190)
-              3: CGATCGGAAGAG =  0.46% (100082)
-              4: AGATTGGAAGAG =  0.26% (55780)
-              5: AGATCGGAAGCG =  0.21% (45037)
+        Top 5 most common 9-bp 5'-kmers:
+                1: AGATCGGAA = 96.00% (96)
+                2: AGATGGGAA =  1.00% (1)
+                3: AGCTCGGAA =  1.00% (1)
+                4: AGAGCGAAA =  1.00% (1)
+                5: AGATCGGGA =  1.00% (1)
 
 
-    --adapter2:  AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATTAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-                 565636656434251341412554143213,30322303132032/11221/1201432333321.+*'%%$$######""""""""
+      --adapter2:  AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATT
+                   ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+       Consensus:  AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATTAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+         Quality:  525555555144141441430333303.2/22-2/-1..11111110--00000///..+....--*-),,,+++++++**(%'%%%$
 
-      Top 5 most common 12-bp 5'-kmers:
-              1: AGATCGGAAGAG = 94.35% (20280766)
-              2: AGATCGGAAGGG =  0.22% (47155)
-              3: AGATCGGAAAAG =  0.21% (44616)
-              4: AGATAGGAAGAG =  0.20% (43593)
-              5: AGATCGGGAGAG =  0.17% (37479)
+        Top 5 most common 9-bp 5'-kmers:
+                1: AGATCGGAA = 100.00% (100)
+
+No files are generated from running the adapter identification step.
+
+The consensus sequences inferred are compared to those specified using the --adapter1 and --adapter2 command-line options, or with the default values for these if no values have been given (as in this case). Pipes (|) indicate matches between the provided sequences and the consensus sequence, and "*" indicate the presence of unspecified bases (Ns).
+
+
+
+=head1 EXAMPLE: Demultiplexing of paired end reads
+
+As of version 2.1, AdapterRemoval supports simultanious demultiplexing and adapter trimming; demultiplexing is carried out using a simple comparison between the specified barcode sequences and the first N bases of the reads, corresponding to the length of the barcodes. Reads identified as containing a specific barcode or pair of barcodes are then trimmed using adapter sequences including these barcodes.
+
+Demultiplexing is enabled by creating a table of barcodes, the first column of which species the sample name (using characters [a-zA-Z0-9_]) and the second and (optional) third columns specifies the mate 1 and mate 2 barcode sequences.
+
+For example, a table of barcodes from a double-indexed run might be as follows (see I<examples/barcodes.txt>):
+
+    $ cat barcodes.txt
+    sample_1 ATGCGGA TGAATCT
+    sample_2 ATGGATT ATAGTGA
+    sample_7 CAAAACT TCGCTGC
+
+In the case of single-read reads, only the first two columns are required. AdapterRemoval is invoked with the --barcode-list option, specifying the path to this table:
+
+    $ AdapterRemoval --file1 demux_1.fq --file2 demux_2.fq --basename output_dumux --barcode-list barcodes.txt
+
+This generates a set of output files for each sample specified in the barcode table, using the basename (--basename) as the prefix, followed by a dot and the sample name, followed by a dot and the default name for a given file type. For example, the output files for sample_2 would be
+
+    output_demux.sample_2.discarded
+    output_demux.sample_2.pair1.truncated
+    output_demux.sample_2.pair2.truncated
+    output_demux.sample_2.settings
+    output_demux.sample_2.singleton.truncated
+
+The settings files generated for each sample summarizes the reads for that sample only; in addition, a basename.settings file is generated which summarizes the number and proportion of reads identified as belonging to each sample.
+
+The maximum number of mismatches allowed when comparing barocdes is controlled using the options --barcode-mm, --barcode-mm-r1, and --barcode-mm-r2, which specify the maximum number of mismatches total, and the maximum number of mismatches for the mate 1 and mate 2 barcodes respectively. Thus, if mm_1(i) and mm_2(i) represents the number of mismatches observed for barcode-pair i for a given pair of reads, these options require that
+
+   1. mm_1(i) <= --barcode-mm-r1
+   2. mm_2(i) <= --barcode-mm-r2
+   3. mm_1(i) + mm_2(i) <= --barcode-mm
+
+
 
 =head1 EXIT STATUS
 
-0 if everything worked as planned. 1 otherwise.
+0 if everything worked as planned, a non-zero value otherwise.
 
 =head1 REPORTING BUGS
 
